now the cards will not flip

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="container">
         <header>
-            <h1> Ramona's Matching Game</h1>
+            <h1> Mona's Matching Game</h1>
         </header>
 
         <section class="score-panel">
